# Slambook

./: CMakeLists.txt  README.md
BundleAdjustment/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_g2o.cpp  common.h  final.ply  random.h  rotation.h
CPPandCmake/: CMakeLists.txt  libHelloSLAM.h
Eigen3AndPangolin/: CMakeLists.txt  README.md
Eigen3AndPangolin/examples/: CMakeLists.txt  Findepoxy.cmake  plotTrajectory.cpp
Eigen3AndPangolin/useEigen/: eigenMatrix.cpp
Eigen3AndPangolin/useGeometry/: eigenGeometry.cpp
Eigen3AndPangolin/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
Eigen3AndPangolin/visualizeGeometry/b/: CMakeCache.txt  Makefile  cmake_install.cmake  visualizeGeometry
Features&PoseEstimation/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
Features_and_PoseEstimation/: CMakeLists.txt  README.md  orb_self.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
LoopClosure/: feature_training.cpp  loop_closure.cpp
NonlinearOptimization/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
OpenCVand3DVision/: CMakeLists.txt
OpenCVand3DVision/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
OpenCVand3DVision/imageBasics/b/: CMakeCache.txt  Makefile  cmake_install.cmake  imageBasics  undistortImage
OpenCVand3DVision/rgbd/: CMakeLists.txt  joinMap.cpp
OpenCVand3DVision/stereoVision/: CMakeLists.txt  stereoVision.cpp
OpticalFlow/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
Sophus_LieGroups/: CMakeLists.txt  useSophus.cpp
Sophus_LieGroups/b/: CMakeCache.txt  Makefile  cmake_install.cmake  useSophus
Sophus_LieGroups/examples/: CMakeLists.txt  trajectoryError.cpp
Sophus_LieGroups/examples/b/: CMakeCache.txt  Makefile  cmake_install.cmake  trajectoryError
scripts/: Eigen3AndPangolin_example.sh  Sophus_example.sh  bundle_adjustment_ceres.sh  bundle_adjustment_g2o.sh  ceresCurveFitting.sh  direct_method.sh  eigenGeometry.sh  eigenMatrix.sh  final.ply  g2oCurveFitting.sh  gaussNewton.sh  initial.ply  joinMap.sh  loop_closure.sh  optical_flow.sh  orb_cv.sh  orb_self.sh  pose_estimation_2d2d.sh  pose_estimation_2d3d.sh  pose_estimation_3d3d.sh  stereoVision.sh  triangulation.sh  useSophus.sh  visualizeGeometry.sh
